--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
   <title>myResolutions</title>
+  <script src="https://w.soundcloud.com/player/api.js" type="text/javascript"></script>
 </head>
 
 <body>
